@@ -120,7 +120,8 @@ namespace MonoDevelop.Database.ConnectionManager
 		protected void OnUpdateCreateTrigger (CommandInfo info)
 		{
 			BaseNode node = (BaseNode)CurrentNode.DataItem;
-			info.Enabled = node.ConnectionContext.SchemaProvider.SupportsSchemaOperation (OperationMetaData.Create, SchemaMetaData.Trigger);
+			//TODO: info.Enabled = MetaDataService.IsTriggerMetaDataSupported (node.ConnectionContext.SchemaProvider, TriggerMetaData.Create);
+			info.Enabled = false;
 		}
 	}
 }
